[tool.poetry]
name = "transformations"
version = "2022.10.18"
description = ""
authors = ["Christoph Gohlke <cgohlke@cgohlke.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
